IRtest_out/68_brainfk.err
irs/68_brainfk.ll:161:16: error: expected fcmp predicate (e.g. 'oeq')
  %v171 = fcmp ne i32* %v169, zeroinitializer
               ^
1 error generated.
